--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -49,7 +49,7 @@
 	</div>
 {% endif %}
 <div class="divider-vertical">
-	<a href="/set_comp_env"><button class="btn btn-outline-dark">COMPUTING ENV SETTINGS <i class="fa fa-cog"></i></button></a>
+	<a href="/preferences"><button class="btn btn-outline-dark">PREFERENCES <i class="fa fa-cog"></i></button></a>
 </div>
 <div class="divider-vertical">
 {% if command_btn is not none %}
