--- a/caravel/jinja_templates/process.html
+++ b/caravel/jinja_templates/process.html
@@ -1,14 +1,14 @@
 {% extends "template.html" %}
 {% block head %}
-  {{ super() }}
-  <script type=text/javascript>
+    {{ super() }}
+    <script type=text/javascript>
       $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-  </script>
-  <script type=text/javascript>
+    </script>
+    <script type=text/javascript>
     var poller;
     var interval;
     function start_interval(){
-      // Engage the automatic status checking 
+      // Engage the automatic status checking
       if (typeof interval !== 'undefined') {
         poller = setInterval(function () {
             check_flags();
@@ -21,7 +21,7 @@
       }
     };
     function check_flags() {
-        // this is called on a page load, "check status" click and automatically every `data.interval` ms when engaged 
+        // this is called on a page load, "check status" click and automatically every `data.interval` ms when engaged
         console.log("checking status");
         $.getJSON($SCRIPT_ROOT + '/_background_check_status', callback_func);
         function callback_func(data, status) {
@@ -51,8 +51,8 @@
       console.log("Automatic status polling terminated");
       return false;
     }
-  </script>
-  <script type=text/javascript>
+    </script>
+    <script type=text/javascript>
     // subproject activation
     $(function() {
       $('a#activate_subproject').bind('click', function() {
@@ -74,8 +74,8 @@
         $("div#status_table").html('Subproject was activated, check the status again');
       });
     });
-  </script>
-  <script type=text/javascript>
+    </script>
+    <script type=text/javascript>
     // subproject deactivation
     $(function() {
       $('a#deactivate_subproject').bind('click', function() {
@@ -97,8 +97,8 @@
         $("div#status_table").html('Subproject was deactivated, check the status again');
       });
     });
-  </script>
-  <script type=text/javascript>
+    </script>
+    <script type=text/javascript>
     function render_options() {
             $.getJSON($SCRIPT_ROOT + '/_background_options', {
           act: $('select[name="actions"]').val(),
@@ -112,14 +112,19 @@
       render_options()
       $('select#show_options').bind('change', render_options);
     });
-  </script>
-  <script>
+    </script>
+    <script>
     function show_value(name, value) {
       // This function is used in the form in the options.html file
       // get the name of the element to control and the value that should be displayed
      document.getElementById(name).innerHTML=value;
     };
-  </script>
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
 {% endblock %}
 {% block title %}Process{% endblock %}
 {% block content %}
@@ -190,6 +195,7 @@
     </div>
 </div>
 {% endblock %}
+
 
 
 
