collapse all the settings sections by default

--- a/caravel/jinja_templates/preferences.html
+++ b/caravel/jinja_templates/preferences.html
@@ -41,7 +41,7 @@
 			</button>
 		  </h2>
 		</div>
-		<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+		<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
 		  <div class="card-body">
 			<div class="card border-light mb-3" style="display:inline-block;">
       <div class="card-header"><b>Configure computing environment</b></div>
