more specific info when sample flags are missing, make model wider

--- a/caravel/jinja_templates/process.html
+++ b/caravel/jinja_templates/process.html
@@ -192,8 +192,8 @@
 	</div>
 	<!-- Button trigger modal -->
 <!-- Modal -->
-<div class="modal fade" id="metadataModal" tabindex="-1" role="dialog" aria-labelledby="metadataModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+<div class="modal fade bd-example-modal-lg" id="metadataModal" tabindex="-1" role="dialog" aria-labelledby="metadataModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title text-center"  id="metadataModalLabel">Project metadata</h5>
