--- a/caravel/jinja_templates/template.html
+++ b/caravel/jinja_templates/template.html
@@ -23,7 +23,7 @@
 					  {% if messages %}
 					    <ul class=flashes>
 					    {% for message in messages %}
-	  						<div class="alert alert-warning col-md-5">
+	  						<div class="alert alert-info col-md-5">
 								<button type="button" class="close" data-dismiss="alert">&times;</button>
 								{{ message }}
 							</div>
